<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleCheckin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFBB33"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/titulo_do_evento"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etNameChekin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/nome"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEmailCheckin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textEmailAddress" />

    <Button
        android:id="@+id/btnCheckinDialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/check_in" />

</LinearLayout>