<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/video_loading"
        android:layout_height="150dp"
        android:layout_width="150dp"

        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/successtick" />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:text="@string/success"
        android:textColor="@color/success"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/received_success_response"
        android:textColor="@color/success"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDialog"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:text="@string/continue_english"
        android:textColor="@color/success"
        android:textSize="18sp" />
</LinearLayout>